src/snapshots/afrotd__parser__tests__rule_2.25.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 25
  - 2
title: Previous Spot
text: "Previous Spot ist der Punkt, an dem der Ball zuletzt ins Spiel gebracht wurde."
interpretations: []
