src/snapshots/afrotd__parser__tests__rule_2.25.7.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 25
  - 7
title: Inbounds Spot
text: "Der Inbounds Spot ist der Schnittpunkt der nächsten Hash Mark mit der Meterlinie, die sich entweder durch den Dead Ball Spot oder den Punkt zieht, an dem der Ball nach einer Strafe in einer Seitenzone verbleibt."
interpretations: []
