src/snapshots/afrotd__parser__tests__rule_2.25.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 25
  - 8
title: "Punkt, an dem der Lauf endet"
text: "Der Punkt, an dem der Lauf endet, ist der Punkt, an dem:\n\ta) der Ball im Besitz eines Spielers für dead erklärt wird;\n\tb) ein Spieler den Ballbesitz durch einen Fumble verliert;\n\tc) sich eine Ballübergabe ereignet;\n\td) ein illegaler Vorwärtspass geworfen wird;\n\te) ein Rückpass geworfen wird;\n\tf) ein illegaler Scrimmage Kick jenseits der neutrale Zone durchgeführt wird;\n\tg) sich ein Return-Kick ereignet;\n\th) Spieler Ballbesitz unter den Voraussetzungen der „Momentum Regel“ erlangt wird (Regel 8.5.1.a Ausnahmen)."
interpretations: []
